--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://PsyHow.github.io/portfolio",
+  "homepage": "https://psyhow.github.io/portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
