--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react-dom": "^17.0.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "typescript": "^4.1.2",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
