--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-tsparticles": "^1.39.0",
     "sass": "^1.43.4",
     "typescript": "^4.1.2",
     "typewriter-effect": "^2.18.2",
